--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         	<div class="container">
         		<div class="gallery_f_inner row imageGallery1">
 					<div class="col-lg-4 col-md-4 col-sm-6 php website">
-						<a href="http://gpcpurapuzha.ac.in/index.php" target="_blank">
+						<a href="http://highrangeguppy.epizy.com/" target="_blank">
 							<div class="h_gallery_item">
 								<div class="g_img_item">
 									<img class="img-fluid" src="img/gallery/hrg.png" alt="">
