--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
         <title>Abhijith KM</title>
+		<meta property="og:title" content="Abhijith KM">
+		<meta property="og:description" content="Web Developer, Hard-working web developer with a flair for creating elegant solutions in the least amount of time.">
+		<meta property="og:image" content="img/personal.jpg">
+		<meta property="og:url" content="https://abhijithkm.github.io/">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="keywords" content="Abhijith KM">
+		<meta name="author" content="Abhijith KM">
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
