--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>July 2017 to present</p>
+											<p>July 2017 to April 2020</p>
 										</div>
 										<div class="media-body">
 											<h4>Govt.Engineering College Idukki</h4>
