--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 							</div>
 							<div class="g_item_text">
 									<h4>Kerala Gazetted Officer's Association</h4>
-									<p>Website + Web Application</p>
+									<p>Website + Dashboard</p>
 								</div>
 							</div>
 						</a>
