--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Abhijith KM</title>
 		<meta property="og:title" content="Abhijith KM">
 		<meta property="og:description" content="Web Developer, Hard-working web developer with a flair for creating elegant solutions in the least amount of time.">
-		<meta property="og:image" content="img/personal.jpg">
+		<meta property="og:image" content="img/abhijithkm.jpg">
 		<meta property="og:url" content="https://abhijithkm.github.io/">
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="keywords" content="Abhijith KM">
@@ -31,7 +31,7 @@
 					<div class="banner_content">
 						<div class="media">
 							<div class="d-flex">
-								<img src="img/personal.jpg" alt="">
+								<img src="img/abhijithkm.jpg" alt="">
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
