--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 						<a href="https://kgoa.in/" target="_blank">
 							<div class="h_gallery_item">
 							<div class="g_img_item">
-								<img class="img-fluid" src="img/gallery/kgoa.png" alt="">
+								<img class="img-fluid" src="img/gallery/kgoa.in.png" alt="">
 							</div>
 							<div class="g_item_text">
 									<h4>Kerala Gazetted Officer's Association</h4>
