updated cv and changed css

--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
                         </li>
                     </ul>
                 </div>
+                <div class="contactInfo skills">
+                    <h3 class="title">Professional Skills</h3>
+                    <div class="boxes">
+                        <span class="box">HTML</span>
+                        <span class="box">PHP</span>
+                        <span class="box">laravel</span>
+                        <span class="box">CodeIgniter</span>
+                        <span class="box">CSS</span>
+                        <span class="box">Bootstrap</span>
+                        <span class="box">JavaScript</span>
+                        <span class="box">jQuery</span>
+                    </div>
+                </div>
+
                 <div class="contactInfo languages">
                     <h3 class="title">languages</h3>
                     <ul>
@@ -86,89 +100,112 @@
                         </li>
                     </ul>
                 </div>
+                <div class="contactInfo interest">
+                    <h3 class="title">Interests</h3>
+                    <ul>
+                        <li><i class="fa fa-code" aria-hidden="true"></i>Coding</li>
+                    </ul>
+                </div>
             </div>
             <div class="right_side">
                 <div class="about">
                     <h2 class="title2">Profile</h2>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis aliquam magnam mollitia sed
-                        incidunt eos nam, aspernatur quo fugiat iste similique ratione, suscipit dolore recusandae
-                        <br><br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores, alias perferendis
-                        nobis ipsa sit recusandae quia dignissimos accusamus rem ullam numquam consequuntur corrupti!
-                        Quos laborum delectus velit tempore qui expedita! atque dolores maxime possimus soluta!
-                    </p>
+                        To work in a challenging
+                        environment which demands
+                        constant development of fresh
+                        skills and the maximum
+                        utilization of the existing skills </p>
                 </div>
                 <div class="about">
                     <h2 class="title2">Experience</h2>
                     <div class="box">
                         <div class="year_company">
                             <h5>2021-2022</h5>
-                            <h5>GECI</h5>
                         </div>
                         <div class="text">
                             <h4>Instructor Grade II</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eligendi adipisci
-                                laborum, expedita natus et necessitatibus laudantium omnis fugit nobis ipsum maiores ab
-                                beatae saepe consequatur, fugiat libero ut nesciunt!</p>
+                            <p>Department of Information Technology, Government Engineering College Idukki (GECI)
+                            <ul>
+
+                                <li>Assistance in Labs</li>
+                                <li>Member in College Software Development Cell (SDC)</li>
+                                <li>Feedback management software</li>
+                            </ul>
+                            </p>
                         </div>
                     </div>
                     <div class="box">
                         <div class="year_company">
                             <h5>2017-2020</h5>
-                            <h5>GECI</h5>
                         </div>
                         <div class="text">
                             <h4>Tradesman</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eligendi adipisci
-                                laborum, expedita natus et necessitatibus laudantium omnis fugit nobis ipsum maiores ab
-                                beatae saepe consequatur, fugiat libero ut nesciunt!</p>
+                            <p>Department of Information Technology, Government Engineering College Idukki (GECI)
+                            <ul>
+
+                                <li>OPPAM Web portal for IDUKKI DISTRICT CO - OPERATIVE BANK(IDCB)</li>
+                                <li>Attendance management software</li>
+                                <li>Hostel admission Software</li>
+                            </ul>
+                            </p>
                         </div>
                     </div>
                 </div>
 
-                <div class="about skills">
-                    <h2 class="title2">Professional Skills</h2>
+                <div class="about projects">
+                    <h2 class="title2">Projects Undertaken</h2>
                     <div class="box">
-                        <h4>HTML</h4>
-                        <div class="percent">
-                            <div style="width: 99%;"></div>
+                        <div class="text">
+                            <h4>Website for Kerala Gazetted Officer's Association (KGOA)</h4>
+                            <p>Website and Web portal to manage their organizational activities which Includes
+                                Membership,KGOA News, Events management, etc.
+                            <ul>
+                                <li>Fully manageable roles based Web Application.</li>
+                                <li>Developed in <span class="developedIn">Laravel & MySQL</span></li>
+                                <li><a href="https://kgoa.in/">https://kgoa.in/</a></li>
+                            </ul>
+                            </p>
                         </div>
                     </div>
                     <div class="box">
-                        <h4>PHP</h4>
-                        <div class="percent">
-                            <div style="width: 95%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>laravel</h4>
-                        <div class="percent">
-                            <div style="width: 90%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>CSS</h4>
-                        <div class="percent">
-                            <div style="width: 80%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>JavaScript</h4>
-                        <div class="percent">
-                            <div style="width: 89%;"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="about interest">
-                    <h2 class="title2">Interests</h2>
-                    <ul>
-                        <li><i class="fa fa-code" aria-hidden="true"></i>Coding</li>
-                        <li><i class="fa fa-code" aria-hidden="true"></i>Coding</li>
-                        <li><i class="fa fa-code" aria-hidden="true"></i>Coding</li>
-                        <li><i class="fa fa-code" aria-hidden="true"></i>Coding</li>
-                    </ul>
-                </div>
+                        <div class="text">
+                            <h4>OPPAM Web portal for IDUKKI DISTRICT CO - OPERATIVE BANK(IDCB)</h4>
+                            <p>OPPAM was a new scheme for Kudumbashree.
 
+                            <ul>
+                                <li>Web portal to manage the information about all Kudumbashree units and their
+                                    accounts.</li>
+                                <li>Developed in <span class="developedIn">PHP & MySQL</span></li>
+                                <li><a href="http://idcboppam.com/uat/">http://idcboppam.com/uat/</a></li>
+                            </ul>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="text">
+                            <h4>Feedback management software for GEC Idukki</h4>
+                            <p>Feedback management software for faculty evaluation by students
+                            <ul>
+                                <li>Developed under Software Development Cell (SDC) GECI.</li>
+                                <li>Generalized application for academic institution</li>
+                                <li>Beneficiaries can register and create feedbacks.</li>
+                                <li>Developed in <span class="developedIn">Laravel & MySQL</span></li>
+                            </ul>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="text">
+                            <h4>Hostel admission Software for GEC Idukki</h4>
+                            <p>Software for managing Hostel admission of students.
+                            <ul>
+                                <li>Developed in <span class="developedIn">CodeIgniter and MySQL</span></li>
+                            </ul>
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
