added target in a

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <ul>
                                 <li>Fully manageable roles based Web Application.</li>
                                 <li>Developed in <span class="developedIn">Laravel & MySQL</span></li>
-                                <li><a href="https://kgoa.in/">https://kgoa.in/</a></li>
+                                <li><a href="https://kgoa.in/" target="_blank">https://kgoa.in/</a></li>
                             </ul>
                             </p>
                         </div>
@@ -177,7 +177,7 @@
                                 <li>Web portal to manage the information about all Kudumbashree units and their
                                     accounts.</li>
                                 <li>Developed in <span class="developedIn">PHP & MySQL</span></li>
-                                <li><a href="http://idcboppam.com/uat/">http://idcboppam.com/uat/</a></li>
+                                <li><a href="http://idcboppam.com/uat/" target="_blank">http://idcboppam.com/uat/</a></li>
                             </ul>
                             </p>
                         </div>
