--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@
                     <h3 class="title">Professional Skills</h3>
                     <div class="boxes">
                         <span class="box">HTML</span>
-                        <span class="box">PHP</span>
-                        <span class="box">laravel</span>
-                        <span class="box">CodeIgniter</span>
                         <span class="box">CSS</span>
                         <span class="box">Bootstrap</span>
                         <span class="box">JavaScript</span>
                         <span class="box">jQuery</span>
+                        <span class="box">PHP</span>
+                        <span class="box">MySQL</span>
+                        <span class="box">laravel</span>
+                        <span class="box">CodeIgniter</span>
                     </div>
                 </div>
 
